created get and post endpoints for session + tests
